[project]
name = "opentelemetry-openstack"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-instrumentation",
    "opentelemetry-distro",
    "opentelemetry-test-utils",
    "opentelemetry-instrumentation-oslo-log",
    "opentelemetry-instrumentation-oslo-messaging",
    "opentelemetry-instrumentation-taskflow",
    "opentelemetry-instrumentation-openstacksdk",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "tox",
    "tox-uv",
    "prek",
]

[tool.uv]
package = false
required-version = ">=0.6.0"

[tool.uv.sources]
opentelemetry-instrumentation-oslo-log = { workspace = true }
opentelemetry-instrumentation-oslo-messaging = { workspace = true }
opentelemetry-instrumentation-taskflow = { workspace = true }
opentelemetry-instrumentation-openstacksdk = { workspace = true }

[tool.uv.workspace]
members = [
    "instrumentation/*",
]

[tool.ruff]
target-version = "py310"
line-length = 79
extend-exclude = ["_template", "*_pb2*.py*"]
output-format = "concise"

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "PLC",
    "PLE",
    "Q",
    "A",
    "TID",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
detect-same-package = false
known-first-party = ["opentelemetry"]
known-third-party = [
    "opencensus",
    "opentelemetry",
    "psutil",
    "pytest",
    "redis",
    "redis_opentracing",
]
