[project]
name = "opentelemetry-instrumentation-oslo-messaging"
description = "OpenStack oslo.messaging instrumentation for OpenTelemetry"
readme = "README.md"
authors = [
    { name = "Pham Le Gia Dai", email = "daipham3213@gmail.com" }
]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "opentelemetry-api",
    "opentelemetry-instrumentation",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
]

[project.optional-dependencies]
instruments = [
    "oslo.messaging"
]

[project.entry-points.opentelemetry_instrumentor]
oslo_messaging = "opentelemetry.instrumentation.oslo_messaging:OsloMessagingInstrumentor"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/oslo_messaging/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
